--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pesquisa-satisfacao",
+  "name": "hot-site",
   "private": true,
   "version": "0.0.4",
   "description": "A starter project for AngularJS Material",
