--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "peerDependencies": {
     "angular": "@>=1.3 <1.6",
     "angular-animate": "^@>=1.3 <1.6",
-    "angular-aria": "@>=1.3 <1.6",
+    "angular-aria": "@>=1.3 <1.6"
   },
   "dependencies": {
     "angular": "^1.5.5",
