--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "angular": "^1.5.5",
     "angular-animate": "^1.5.5",
     "angular-aria": "^1.5.5",
+    "angular-file-upload": "^2.5.0",
     "angular-material": "^1.1.0",
     "bootstrap": "^3.3.7",
     "jquery": "^3.2.1"
