--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "angular-file-upload": "^2.5.0",
     "angular-material": "^1.1.0",
     "bootstrap": "^3.3.7",
-    "jquery": "^3.2.1"
+    "jquery": "^3.2.1",
+    "jquery.maskedinput": "^1.4.1"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.9",
