--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "angular-material": "^1.1.0",
     "bootstrap": "^3.3.7",
     "jquery": "^3.2.1",
+    "jquery-maskmoney": "^3.0.2",
     "jquery.maskedinput": "^1.4.1"
   },
   "devDependencies": {
