--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "angular-animate": "^1.5.5",
     "angular-aria": "^1.5.5",
     "angular-file-upload": "^2.5.0",
+    "angular-locale-pt-br": "^1.3.16",
     "angular-material": "^1.1.0",
     "bootstrap": "^3.3.7",
     "bootstrap-datepicker": "^1.7.1",
