--- a/package.json
+++ b/package.json
@@ -19,14 +19,9 @@
     "angular": "^1.5.5",
     "angular-animate": "^1.5.5",
     "angular-aria": "^1.5.5",
-    "angular-file-upload": "^2.5.0",
-    "angular-locale-pt-br": "^1.3.16",
     "angular-material": "^1.1.0",
     "bootstrap": "^3.3.7",
-    "bootstrap-datepicker": "^1.7.1",
-    "jquery": "^3.2.1",
-    "jquery-maskmoney": "^3.0.2",
-    "jquery.maskedinput": "^1.4.1"
+    "jquery": "^3.2.1"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.9",
